--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
       echo ${secrets.DOCKERHUB_REPO}
    -
      name: Docker build image front
-     run: docker build -t $DOCKERHUB_REPO:front -f Dockerfile.front .
+     run: docker build -t $secrets.DOCKERHUB_REPO:front -f Dockerfile.front .
    -
      name: Docker push image front
      run: |
@@ -42,8 +42,13 @@ jobs:
    runs-on: ubuntu-latest
    strategy:
      matrix:
-       node-version: [8.x] steps: - name: Checkout uses: actions/checkout@v2 -
-                 name: Use Node.js ${{ matrix.node-version }}
+       node-version: [8.x]
+   steps:
+     -
+       name: Checkout
+       uses: actions/checkout@v2
+     -
+       name: Use Node.js ${{ matrix.node-version }}
        uses: actions/setup-node@v1
        with:
          node-version: ${{ matrix.node-version }}
