--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,7 +34,7 @@ jobs:
      name: Docker build image front
      run: |
       echo hello $DOCKERHUB_REPO
-      docker build -t ${DOCKERHUB_REPO}:front -f Dockerfile.front .
+      docker build -t ${{secrets.DOCKERHUB_REPO}}:front -f Dockerfile.front .
    -
      name: Docker push image front
      run: |
