--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  DOCKERHUB_REPO: "${{ secrets.DOCKERHUB_REPO }}"
+  USERNAME: "${{ secrets.DOCKERHUB_USERNAME }}"
+  PASS: "${{ secrets.DOCKERHUB_PASS }}"
+
 jobs:
   front:
    runs-on: ubuntu-latest
@@ -23,11 +28,10 @@ jobs:
        node-version: ${{ matrix.node-version }}
    -
      name: Install, Tests & build
-     env:
-       DOCKERHUB_REPO: ${{secrets.DOCKERHUB_REPO}}
      run: |
       ssh -V
-      echo hello secret = $DOCKERHUB_REPO !
+      echo hello secret = $DOCKERHUB_REPO:latest !
+
       #  npm install
       #  npm test
       #  npm run-script build
