--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,7 +43,8 @@ jobs:
      name: Docker push image front
      run: |
        echo $PASS | docker login $DOCKER_REGISTRY --username $USERNAME --password-stdin
-       docker push $DOCKERHUB_REPO/front
+       docker images
+       docker push "$DOCKERHUB_REPO/front"
 
   # back:
   #  runs-on: ubuntu-latest
