--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,12 +29,9 @@ jobs:
    -
      name: Install, Tests & build
      run: |
-      ssh -V
-      echo hello secret = $DOCKERHUB_REPO:latest !
-
-      #  npm install
-      #  npm test
-      #  npm run-script build
+       npm install
+       npm test
+       npm run-script build
    -
      name: Docker build image front
      run: |
@@ -42,38 +39,39 @@ jobs:
    -
      name: Docker push image front
      run: |
-       echo $PASS | docker login $DOCKER_REGISTRY --username $USERNAME --password-stdin
+       echo $PASS | docker login --username $USERNAME --password-stdin
        docker images
        docker push "$DOCKERHUB_REPO:front"
 
-  # back:
-  #  runs-on: ubuntu-latest
-  #  strategy:
-  #    matrix:
-  #      node-version: [8.x]
-  #  steps:
-  #    -
-  #      name: Checkout
-  #      uses: actions/checkout@v2
-  #    -
-  #      name: Use Node.js ${{ matrix.node-version }}
-  #      uses: actions/setup-node@v1
-  #      with:
-  #        node-version: ${{ matrix.node-version }}
-  #    -
-  #      name: Install & Tests
-  #      run: |
-  #        npm install
-  #        npm test
-  #    -
-  #      name: Docker build image back
-  #      run: docker build -t nhadjarab/back-devops-project:latest -f Dockerfile.back .
-    #  -
-      #  name: Docker push image back
-      #  run: |
-      #    echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login $DOCKER_REGISTRY --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-      #    docker push yolanmq/back-devops-project:latest
+  back:
+   runs-on: ubuntu-latest
+   strategy:
+     matrix:
+       node-version: [8.x]
+   steps:
+     -
+       name: Checkout
+       uses: actions/checkout@v2
+     -
+       name: Use Node.js ${{ matrix.node-version }}
+       uses: actions/setup-node@v1
+       with:
+         node-version: ${{ matrix.node-version }}
+     -
+       name: Install & Tests
+       run: |
+         npm install
+         npm test
+     -
+       name: Docker build image back
+       run: docker build -t "$DOCKERHUB_REPO:back" -f Dockerfile.back .
+     -
+       name: Docker push image back
+       run: |
+         echo $PASS | docker login --username $USERNAME --password-stdin
+         docker push "$DOCKERHUB_REPO:back"
 
+         
   # deploy:
   #   runs-on: ubuntu-latest
   #   needs: [front, back]
