--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -72,32 +72,12 @@ jobs:
          docker push "$DOCKERHUB_REPO:back"
 
          
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: [front, back]
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [front, back]
 
-  #   steps:
-  #     -
-  #       name: Checkout
-  #       uses: actions/checkout@v2
-  #     -
-  #       name: Terraform setup
-  #       uses: hashicorp/setup-terraform@v1.2.1
-      # -
-      #   name: Terraform init & apply
-      #   run: |
-      #     echo "${{ secrets.SSH_SECRET_KEY }}" > private_key
-      #     eval `ssh-agent -s`
-      #     chmod 500 private_key
-      #     ssh-add private_key
-      #     cd scaleway-terraform/
-                                                                                                                                                                                                                                                                                                                                                                                                       #     export SCALEWAY_ORGANIZATION=${{ secrets.SCALEWAY_ORGANIZATION }}
-      #     export SCW_ACCESS_KEY=${{ secrets.SCW_ACCESS_KEY }}
-      #     export SCW_SECRET_KEY=${{ secrets.SCW_SECRET_KEY }}
-      #     terraform init
-      #     scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -q -i ../private_key yolan@triton.whatbox.ca:/home/yolan/terraform/terraform.tfstate terraform.tfstate
-      #     terraform destroy -auto-approve
-      #     terraform apply -auto-approve
-      #     scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -q -i ../private_key terraform.tfstate yolan@triton.whatbox.ca:/home/yolan/terraform/terraform.tfstate
-
-
+    steps:
+       -
+         name: printing 
+         run: 
+          echo "hello world"
