--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -81,3 +81,4 @@ jobs:
          name: printing 
          run: 
           echo "hello world"
+          ssh ubuntu@ec2-34-240-3-197.eu-west-1.compute.amazonaws.com /bin/echo "foo" > testFile 
