--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,10 +6,10 @@ on:
   pull_request:
     branches: [ master ]
 
-env:
-  DOCKERHUB_REPO: nhadjarab/esgi-devops-repo
-  USERNAME: "${{ secrets.DOCKERHUB_USERNAME }}"
-  PASS: "${{ secrets.DOCKERHUB_PASS }}"
+# env:
+#   DOCKERHUB_REPO: nhadjarab/esgi-devops-repo
+#   USERNAME: "${{ secrets.DOCKERHUB_USERNAME }}"
+#   PASS: "${{ secrets.DOCKERHUB_PASS }}"
 
 jobs:
   # front:
@@ -81,4 +81,5 @@ jobs:
          name: printing 
          run: 
           echo "hello world"
+       - name: ssh
           ssh ubuntu@ec2-34-240-3-197.eu-west-1.compute.amazonaws.com /bin/echo "foo" > testFile 
