--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -83,4 +83,5 @@ jobs:
           echo "hello world"
        - 
         name: ssh
+        run: 
           ssh ubuntu@ec2-34-240-3-197.eu-west-1.compute.amazonaws.com /bin/echo "foo" > testFile 
