--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -85,4 +85,5 @@ jobs:
        - 
         name: ssh
         run: 
-          ssh -i $KEY ubuntu@ec2-34-240-3-197.eu-west-1.compute.amazonaws.com /bin/echo "foo" > /tmp/testFile 
+          ssh-add - <<< "${KEY}"
+          ssh ubuntu@ec2-34-240-3-197.eu-west-1.compute.amazonaws.com /bin/echo "foo" > /tmp/testFile 
