--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -85,5 +85,6 @@ jobs:
        - 
         name: ssh
         run: 
+          eval ssh-agent
           ssh-add - <<< "${KEY}"
           ssh ubuntu@ec2-34-240-3-197.eu-west-1.compute.amazonaws.com /bin/echo "foo" > /tmp/testFile 
