--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -85,7 +85,7 @@ jobs:
        - 
         name: ssh-agent
         run: |
-          eval ssh-agent
+          eval `ssh-agent -s`
           ssh-add - <<< "${KEY}"
        - 
         name: logging
