--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -86,8 +86,8 @@ jobs:
         name: ssh-agent
         run: |
           eval `ssh-agent -s`
-          echo ${secrets.SSH_KEY}
-          ssh-add - <<< ${secrets.SSH_KEY}
+          echo "hello world" "${{ secrets.SSH_KEY }}"
+          ssh-add - <<< "${{ secrets.SSH_KEY }}"
        - 
         name: logging
         run: |
