--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -91,4 +91,4 @@ jobs:
        - 
         name: logging
         run: |
-          ssh ubuntu@ec2-34-240-3-197.eu-west-1.compute.amazonaws.com
+          ssh ubuntu@ec2-34-240-3-197.eu-west-1.compute.amazonaws.com "echo hello > /tmp/bonjour"
