--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -87,7 +87,12 @@ jobs:
         run: |
           eval `ssh-agent -s`
           ssh-add - <<< "${{ secrets.SSH_KEY }}"
-       - 
-        name: logging
-        run: |
-          ssh ubuntu@ec2-34-240-3-197.eu-west-1.compute.amazonaws.com "echo hello > /tmp/bonjour"
+     
+       - name: ls -a via ssh
+         uses: garygrossgarten/github-action-ssh@release
+         with:
+            command: ls -a
+            host: ${{ secrets.HOST }}
+            username: ubuntu
+            passphrase: ${{ secrets.PASSPHRASE }}
+            privateKey: ${{ secrets.SSH_KEY}}
