--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -92,5 +92,5 @@ jobs:
             privateKey: ${{ secrets.SSH_KEY}}
             command: 
               cd devops
-              sudo docker-compose pull
-              sudo docker-compose up -d 
+              && sudo docker-compose pull
+              && sudo docker-compose up -d 
