--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -78,7 +78,7 @@ jobs:
 
     steps:
        - 
-        name: ssh-agent
+        name: add SSH key to ssh-agent
         run: |
           eval `ssh-agent -s`
           ssh-add - <<< "${{ secrets.SSH_KEY }}"
@@ -88,7 +88,6 @@ jobs:
          with:
             host: ${{ secrets.HOST }}
             username: ubuntu
-            passphrase: ${{ secrets.PASSPHRASE }}
             privateKey: ${{ secrets.SSH_KEY}}
             command: 
               cd devops
