edited source file 8

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -84,7 +84,7 @@ jobs:
           ssh-add - <<< "${{ secrets.SSH_KEY }}"
      
        - name: deploy
-         uses: nhadjarab/devops.git@master
+         uses: actions/devops@master
          with:
             host: ${{ secrets.HOST }}
             username: ubuntu
